--- a/vignettes/rMAUPS.Rmd
+++ b/vignettes/rMAUPS.Rmd
@@ -26,7 +26,7 @@ To install rMAUPS, you have to first install conda following the document (https
 
 You should also install r, r-recommended. If you have R installed before, you need to ensure libgfortran, libnetcdf and libxml2 are also installed in your conda environment. Besides, it seems important to have r-data.table and r-rcpparmadillo installed through conda before biocmanager installs dependencies (such as DESeq2).
 
-```{bash, eval = FALSE}
+```{r, eval = FALSE}
 $ conda install -c r r r-markdown r-recommended
 $ conda install -c anaconda libgfortran libnetcdf libxml2
 $ conda install -c conda-forge pandoc r-data.table r-rcpparmadillo
