--- a/vignettes/ubiquitin.Rmd
+++ b/vignettes/ubiquitin.Rmd
@@ -45,11 +45,31 @@ Note, for the sake of a quick example, the above command only searched against t
 
 # Viewing protein structure
 
+First, we'll view all of the lysine residues for KRAS.
+
 ```{r viewProt}
 # get hits for P01116
 id <- 'P01116'
 start <- lysine_pos[lysine_pos['UniprotId']==id, 'start']
 end <- lysine_pos[lysine_pos['UniprotId']==id, 'end']
+
+# view on protein structure
+browseProtStructure(id, start, end)
+```
+
+Next, we'll compare those to the lysines with reported ubiquitination sites.
+
+```{r viewProtUb}
+# Here, we manually create a dataframe for the KRAS ubiqutination sites.
+# In the realisitic scenario, you should load the "Ubiquitination_site_dataset" file
+# from PhosphositePlus DB using the readPSPUbiquitin function. You'll need to download
+# it your self due to copy protection.
+id <- 'P01116'
+ub <- data.frame(gene='KRAS', ID=id, position=c(117, 128, 147))
+
+# get ub sites for P01116
+start <- ub[ub['ID']==id, 'position']
+end <- ub[ub['ID']==id, 'position']
 
 # view on protein structure
 browseProtStructure(id, start, end)
